# applied-cs-projects

./: .gitignore  CONCEPT_TO_PROJECT_MAP.md  LICENSE  PORTFOLIO_README.md  README.md  real-world-projects-overview.md
01-distributed-job-queue/: .env.example  BLUEPRINT.md  README.md  docker-compose.yml  pyproject.toml
01-distributed-job-queue/docs/: API.md  ARCHITECTURE.md  BLUEPRINT.md  CONTRIBUTING.md  DEPLOYMENT.md
01-distributed-job-queue/examples/: basic_usage.py  full_example.py
01-distributed-job-queue/tests/: __init__.py  conftest.py  test_api.py  test_broker.py  test_circuit_breaker.py  test_deduplication.py  test_integration.py  test_models.py  test_scheduler.py  test_security.py  test_worker.py
04-ml-training-orchestrator/: BLUEPRINT.md  README.md  pyproject.toml
04-ml-training-orchestrator/docs/: BLUEPRINT.md
04-ml-training-orchestrator/tests/: __init__.py  conftest.py
06-async-runtime/: BLUEPRINT.md  Cargo.toml  README.md
06-async-runtime/benches/: benchmarks.rs
06-async-runtime/docs/: BLUEPRINT.md
06-async-runtime/examples/: channels.rs  echo_server.rs  timeout_demo.rs
06-async-runtime/src/: executor.rs  future.rs  io.rs  io_util.rs  lib.rs  reactor.rs  runtime.rs  scheduler.rs  scope.rs  task.rs  time.rs  timer.rs
06-async-runtime/tests/: executor_tests.rs  io_tests.rs
07-data-lakehouse/: .env.example  README.md  docker-compose.yml  pyproject.toml
07-data-lakehouse/docs/: API.md  ARCHITECTURE.md  BLUEPRINT.md  CONTRIBUTING.md  DEPLOYMENT.md
07-data-lakehouse/tests/: __init__.py  conftest.py  test_checkpoint.py  test_delta_log.py  test_delta_log_comprehensive.py  test_integration.py  test_optimizer.py  test_processor.py  test_processor_comprehensive.py  test_query_processing.py  test_time_travel.py  test_transactions.py
08-streaming-platform/: .env.example  README.md  docker-compose.yml  pyproject.toml
08-streaming-platform/docs/: BLUEPRINT.md
08-streaming-platform/tests/: __init__.py  conftest.py  test_consumer.py  test_exactly_once.py  test_integration.py  test_patterns.py  test_producer.py  test_state.py  test_windowing.py
09-data-observability/: README.md  pyproject.toml
09-data-observability/docs/: BLUEPRINT.md
09-data-observability/tests/: __init__.py  conftest.py  test_alerting.py  test_api.py  test_channels.py  test_collectors.py  test_config.py  test_detector.py  test_health.py  test_lineage.py  test_llm_triage.py  test_ml_detector.py  test_models.py  test_pii.py  test_security.py  test_sql_parser.py
10-warehouse-semantic-layer/: README.md  pyproject.toml
10-warehouse-semantic-layer/docs/: API.md  ARCHITECTURE.md  BLUEPRINT.md  CONTRIBUTING.md  DEPLOYMENT.md
10-warehouse-semantic-layer/tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_config.py  test_dimensions.py  test_enterprise.py  test_facts.py  test_integration.py  test_models.py  test_optimization.py  test_query_engine.py  test_testing.py
11-distributed-kv-raft/: BLUEPRINT.md  Cargo.toml  README.md  build.rs
11-distributed-kv-raft/benches/: raft_benchmarks.rs
11-distributed-kv-raft/docs/: BLUEPRINT.md
11-distributed-kv-raft/proto/: raft.proto
11-distributed-kv-raft/src/: client.rs  cluster.rs  config.rs  error.rs  grpc.rs  lib.rs  metrics.rs  node.rs  rpc.rs  storage.rs  transport.rs
11-distributed-kv-raft/tests/: client_config_tests.rs  comprehensive_tests.rs  e2e_client_tests.rs  edge_case_tests.rs  metrics_tests.rs  raft_tests.rs  rpc_tests.rs  storage_comprehensive_tests.rs  transport_tests.rs
12-distributed-log-system/: BLUEPRINT.md  Cargo.toml  README.md  build.rs
12-distributed-log-system/benches/: kafka_benchmarks.rs
12-distributed-log-system/docs/: BLUEPRINT.md
12-distributed-log-system/proto/: kafka.proto
12-distributed-log-system/src/: broker.rs  cleaner.rs  consumer.rs  controller.rs  group.rs  idempotent.rs  lib.rs  log.rs  producer.rs  protocol.rs  replication.rs  transport.rs
12-distributed-log-system/tests/: broker_tests.rs  integration_tests.rs  log_tests.rs  producer_consumer_tests.rs  protocol_tests.rs
13-service-mesh/: BLUEPRINT.md  Cargo.toml  README.md
13-service-mesh/docs/: API.md  ARCHITECTURE.md  BLUEPRINT.md  CONTRIBUTING.md  DEPLOYMENT.md
13-service-mesh/src/: cert.rs  config.rs  discovery.rs  lib.rs  metrics.rs  policy.rs  proxy.rs  (+2 more)
14-network-stack/: BLUEPRINT.md  Cargo.toml  README.md
15-minimal-os-kernel/: BLUEPRINT.md  Cargo.toml  README.md  rust-toolchain.toml
16-crdt-collaboration/: BLUEPRINT.md  Cargo.toml  README.md
17-columnar-query-engine/: BLUEPRINT.md  Cargo.toml  README.md
18-compiler-interpreter/: BLUEPRINT.md  Cargo.toml  README.md
19-gpu-kernel-optimization/: BLUEPRINT.md  Cargo.toml  README.md
20-simd-analytics-engine/: BLUEPRINT.md  Cargo.toml  README.md
21-custom-embedding-model/: BLUEPRINT.md  Cargo.toml  README.md
22-long-context-attention/: BLUEPRINT.md  Cargo.toml  README.md
23-llm-agentic-runtime/: BLUEPRINT.md  Cargo.toml  README.md
24-synthetic-data-generator/: BLUEPRINT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
25-rag-baseline/: BLUEPRINT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
26-advanced-rag/: .env.example  BLUEPRINT.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
27-micro-model-orchestrated-rag/: .env.example  BLUEPRINT.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
28-ai-workflow-engine/: .env.example  BLUEPRINT.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
29-model-routing-layer/: .env.example  BLUEPRINT.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
30-parameter-server/: BLUEPRINT.md  README.md  pyproject.toml
33-rl-physics-engine/: BLUEPRINT.md  README.md  pyproject.toml
34-distributed-file-system/: .gitignore  BLUEPRINT.md  README.md  docker-compose.yml  pyproject.toml
40-distributed-autograd/: BLUEPRINT.md  README.md  pyproject.toml
(+1553 files in other folders)
