[project]
name = "data-lakehouse"
version = "0.1.0"
description = "Production-grade data lakehouse with Delta Lake and Spark"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.4.0",
    "delta-spark>=2.4.0",
    "great-expectations>=0.18.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
