[project]
name = "streaming-platform"
version = "0.1.0"
description = "Real-time streaming platform with Kafka and Flink"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "confluent-kafka>=2.0.0",
    "fastavro>=1.7.0",
    "pyflink>=1.17.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "testcontainers>=3.7.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
