[package]
name = "distributed-kv-raft"
version = "0.1.0"
edition = "2021"
description = "Distributed key-value store with Raft consensus"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc32fast = "1"
bytes = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "raft_benchmarks"
harness = false
