[package]
name = "network-stack"
version = "0.1.0"
edition = "2021"
description = "TCP/IP and HTTP implementation from scratch"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
bitflags = "2"
etherparse = "0.13"
rand = "0.8"
thiserror = "1"
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
