[package]
name = "crdt-collaboration"
version = "0.1.0"
edition = "2021"
description = "CRDT-based real-time collaboration engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "5"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
