[package]
name = "simd-analytics-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance columnar analytics engine with SIMD vectorization"

[dependencies]
rayon = "1"
thiserror = "1"
rand = "0.8"
num-traits = "0.2"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "simd_benchmarks"
harness = false

[features]
default = []
# Scaffolded hint flag: the kernels in `simd.rs` rely on LLVM auto-vectorization,
# not hand-written `std::arch` intrinsics. This feature carries no intrinsic code;
# real AVX2 instruction selection is driven by the target CPU and the optimizer
# (e.g. `RUSTFLAGS="-C target-cpu=native"`). See docs/BLUEPRINT.md.
avx2 = []
