[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microrag"
version = "0.1.0"
description = "Micro-model orchestrated RAG with small language models for efficient retrieval"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.2.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "optimum>=1.15.0",
    "onnxruntime>=1.16.0",
    "accelerate>=0.25.0",
]
vectordb = [
    "chromadb>=0.4.18",
    "faiss-cpu>=1.7.4",
]
llm = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
]
nlp = [
    "nltk>=3.8.0",
    "spacy>=3.7.0",
]
observability = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "langsmith>=0.0.70",
    "structlog>=23.2.0",
]
guardrails = [
    "guardrails-ai>=0.4.0",
    "nemo-guardrails>=0.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
full = [
    "microrag[ml,vectordb,llm,nlp,observability,guardrails,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
